--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -62,6 +62,22 @@
   "item.forgero.pickaxe_iron_pickaxe_head_oak_handle": "Iron Pickaxe",
   "item.forgero.pickaxe_iron_pickaxe_head_spruce_handle": "Iron Pickaxe",
   "item.forgero.pickaxe_iron_pickaxe_head_birch_handle": "Iron Pickaxe",
+  "item.forgero.iron_pickaxe": "Iron pickaxe",
+  "item.forgero.oak_pickaxe": "Oak pickaxe",
+  "item.forgero.birch_pickaxe": "Birch pickaxe",
+  "item.forgero.spruce_pickaxe": "Spruce pickaxe",
+  "item.forgero.stone_pickaxe": "Stone pickaxe",
+  "item.forgero.gold_pickaxe": "Gold pickaxe",
+  "item.forgero.diamond_pickaxe": "Diamond pickaxe",
+  "item.forgero.netherite_pickaxe": "Netherite pickaxe",
+  "item.forgero.iron_shovel": "Iron shovel",
+  "item.forgero.oak_shovel": "Oak shovel",
+  "item.forgero.birch_shovel": "Birch shovel",
+  "item.forgero.spruce_shovel": "Spruce shovel",
+  "item.forgero.stone_shovel": "Stone shovel",
+  "item.forgero.gold_shovel": "Gold shovel",
+  "item.forgero.diamond_shovel": "Diamond shovel",
+  "item.forgero.netherite_shovel": "Netherite shovel",
   "item.forgero.pickaxe_iron_pickaxe_head_stone_handle": "Iron Pickaxe",
   "item.forgero.pickaxe_iron_pickaxe_head_iron_handle": "Iron Pickaxe",
   "item.forgero.pickaxe_iron_pickaxe_head_gold_handle": "Iron Pickaxe",
