* Created first iteration of a texture generation system
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -77,7 +77,22 @@
   "item.forgero.stone_shovel": "Stone shovel",
   "item.forgero.gold_shovel": "Gold shovel",
   "item.forgero.diamond_shovel": "Diamond shovel",
-  "item.forgero.netherite_shovel": "Netherite shovel",
+  "item.forgero.netherite_shovelhead": "Netherite shovel head",
+  "item.forgero.oak_shovelhead": "Oak shovel head",
+  "item.forgero.birch_shovelhead": "Birch shovel head",
+  "item.forgero.spruce_shovelhead": "Spruce shovel head",
+  "item.forgero.stone_shovelhead": "Stone shovel head",
+  "item.forgero.iron_shovelhead": "Iron shovel head",
+  "item.forgero.gold_shovelhead": "Gold shovel head",
+  "item.forgero.diamond_shovelhead": "Diamond shovel head",
+  "item.forgero.netherite_pickaxehead": "Netherite shovel head",
+  "item.forgero.oak_pickaxehead": "Oak pickaxe head",
+  "item.forgero.birch_pickaxehead": "Birch pickaxe head",
+  "item.forgero.spruce_pickaxehead": "Spruce pickaxe head",
+  "item.forgero.stone_pickaxehead": "Stone pickaxe head",
+  "item.forgero.iron_pickaxehead": "Iron pickaxe head",
+  "item.forgero.gold_pickaxehead": "Gold pickaxe head",
+  "item.forgero.diamond_pickaxehead": "Diamond pickaxe head",
   "item.forgero.pickaxe_iron_pickaxe_head_stone_handle": "Iron Pickaxe",
   "item.forgero.pickaxe_iron_pickaxe_head_iron_handle": "Iron Pickaxe",
   "item.forgero.pickaxe_iron_pickaxe_head_gold_handle": "Iron Pickaxe",
