* Added translation string for netherite shovel
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -49,6 +49,7 @@
   "item.forgero.stone_shovel": "Stone shovel",
   "item.forgero.gold_shovel": "Gold shovel",
   "item.forgero.diamond_shovel": "Diamond shovel",
+  "item.forgero.netherite_shovel": "Diamond shovel",
   "item.forgero.netherite_shovelhead": "Netherite shovel head",
   "item.forgero.oak_shovelhead": "Oak shovel head",
   "item.forgero.birch_shovelhead": "Birch shovel head",
