* Added a new SimpleMaterialLoader, which uses individual files for all materials * Added Acacia, to test how simple adding materials is. It is very simple.
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -40,9 +40,11 @@
   "item.forgero.spruce_pickaxe": "Spruce pickaxe",
   "item.forgero.stone_pickaxe": "Stone pickaxe",
   "item.forgero.gold_pickaxe": "Gold pickaxe",
+  "item.forgero.acacia_pickaxe": "Acacia pickaxe",
   "item.forgero.diamond_pickaxe": "Diamond pickaxe",
   "item.forgero.netherite_pickaxe": "Netherite pickaxe",
   "item.forgero.iron_shovel": "Iron shovel",
+  "item.forgero.acacia_shovel": "Acacia shovel",
   "item.forgero.oak_shovel": "Oak shovel",
   "item.forgero.birch_shovel": "Birch shovel",
   "item.forgero.spruce_shovel": "Spruce shovel",
