Added two gem translations
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -69,7 +69,8 @@
   "item.forgero.gold_pickaxehead": "Gold pickaxe head",
   "item.forgero.diamond_pickaxehead": "Diamond pickaxe head",
   "item.forgero.emerald_gem": "Emerald gem",
-  "item.forgero.azura_gem": "Azura gem",
+  "item.forgero.diamond_gem": "Diamond gem",
   "item.forgero.redstone_gem": "Redstone gem",
-  "item.forgero.lapis_gem": "Lapis Lazuli gem"
+  "item.forgero.lapis_gem": "Lapis Lazuli gem",
+  "item.forgero.ender_gem": "Ender gem"
 }
