Added the Axe to Forgero
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -62,12 +62,30 @@
   "item.forgero.diamond_shovelhead": "Diamond shovel head",
   "item.forgero.netherite_pickaxehead": "Netherite shovel head",
   "item.forgero.oak_pickaxehead": "Oak pickaxe head",
+  "item.forgero.acacia_pickaxehead": "Acacia pickaxe head",
   "item.forgero.birch_pickaxehead": "Birch pickaxe head",
   "item.forgero.spruce_pickaxehead": "Spruce pickaxe head",
   "item.forgero.stone_pickaxehead": "Stone pickaxe head",
   "item.forgero.iron_pickaxehead": "Iron pickaxe head",
   "item.forgero.gold_pickaxehead": "Gold pickaxe head",
   "item.forgero.diamond_pickaxehead": "Diamond pickaxe head",
+  "item.forgero.netherite_axehead": "Netherite axe head",
+  "item.forgero.oak_axehead": "Oak axe head",
+  "item.forgero.acacia_axehead": "Acacia axe head",
+  "item.forgero.birch_axehead": "Birch axe head",
+  "item.forgero.spruce_axehead": "Spruce axe head",
+  "item.forgero.stone_axehead": "Stone axe head",
+  "item.forgero.iron_axehead": "Iron axe head",
+  "item.forgero.gold_axehead": "Gold axe head",
+  "item.forgero.diamond_axehead": "Diamond axe head",
+  "item.forgero.acacia_axe": "Acacia axe",
+  "item.forgero.birch_axe": "Birch axe",
+  "item.forgero.spruce_axe": "Spruce axe",
+  "item.forgero.stone_axe": "Stone axe",
+  "item.forgero.iron_axe": "Iron axe",
+  "item.forgero.gold_axe": "Gold axe",
+  "item.forgero.diamond_axe": "Diamond axe",
+  "item.forgero.netherite_axe": "Netherite axe",
   "item.forgero.emerald_gem": "Emerald gem",
   "item.forgero.diamond_gem": "Diamond gem",
   "item.forgero.redstone_gem": "Redstone gem",
@@ -76,5 +94,6 @@
   "item.forgero.pickaxehead_pattern_default": "Pickaxe head pattern",
   "item.forgero.shovelhead_pattern_default": "Shovel head pattern",
   "item.forgero.handle_pattern_default": "Handle pattern",
-  "item.forgero.binding_pattern_default": "Binding pattern"
+  "item.forgero.binding_pattern_default": "Binding pattern",
+  "item.forgero.axehead_pattern_default": "Axe head pattern"
 }
