Added model the reinforced handle, to test how easy adding patterns really is
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -12,10 +12,19 @@
   "item.forgero.oak_handle_dense": "Dense Oak handle",
   "item.forgero.birch_handle_dense": "Dense Birch handle",
   "item.forgero.stone_handle_dense": "Dense Stone handle",
+  "item.forgero.acacia_handle_dense": "Dense Acacia handle",
   "item.forgero.iron_handle_dense": "Dense Iron handle",
   "item.forgero.gold_handle_dense": "Dense Gold handle",
   "item.forgero.diamond_handle_dense": "Dense Diamond handle",
   "item.forgero.netherite_handle_dense": "Dense Netherite handle",
+  "item.forgero.oak_handle_reinforced": "Reinforced Oak handle",
+  "item.forgero.birch_handle_reinforced": "Reinforced Birch handle",
+  "item.forgero.stone_handle_reinforced": "Reinforced Stone handle",
+  "item.forgero.acacia_handle_reinforced": "Reinforced Acacia handle",
+  "item.forgero.iron_handle_reinforced": "Reinforced Iron handle",
+  "item.forgero.gold_handle_reinforced": "Reinforced Gold handle",
+  "item.forgero.diamond_handle_reinforced": "Reinforced Diamond handle",
+  "item.forgero.netherite_handle_reinforced": "Reinforced Netherite handle",
   "item.forgero.oak_binding_default": "Oak binding",
   "item.forgero.birch_binding_default": "Birch binding",
   "item.forgero.spruce_binding_default": "Spruce binding",
