Added vein mining tools an patterns

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -19,6 +19,7 @@
   "item.forgero.pattern": "Pattern",
   "item.forgero.dense": "Dense",
   "item.forgero.reinforced": "Reinforced",
+  "item.forgero.vein": "Vein mining",
   "item.forgero.oak_handle_default": "Oak handle",
   "item.forgero.birch_handle_default": "Birch handle",
   "item.forgero.spruce_handle_default": "Spruce handle",
