--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,6 +1,18 @@
 {
   "itemGroup.forgero.toolparts": "Tool Parts",
   "itemGroup.forgero.tools": "Tools",
+  "advancements.forgero.root.title": "A world of possibilities",
+  "advancements.forgero.root.description": "Discover the world of Forgero",
+  "advancements.forgero.head.title": "This looks useful",
+  "advancements.forgero.head.description": "Craft your first Tool head",
+  "advancements.forgero.handle.title": "Something to hold on to",
+  "advancements.forgero.handle.description": "Craft your first handle",
+  "advancements.forgero.binding.title": "A sneaky upgrade",
+  "advancements.forgero.binding.description": "Craft your first binding",
+  "advancements.forgero.schematic.title": "I wonder what I could make with this",
+  "advancements.forgero.schematic.description": "Find or craft your first schematic",
+  "advancements.forgero.gem.title": "Shiny upgrade",
+  "advancements.forgero.gem.description": "Craft your first gem",
   "item.forgero.oak": "Oak",
   "item.forgero.spruce": "Spruce",
   "item.forgero.birch": "Birch",
