--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -20,12 +20,17 @@
   "item.forgero.stone": "Stone",
   "item.forgero.iron": "Iron",
   "item.forgero.gold": "Gold",
+  "item.forgero.warped": "Warped",
+  "item.forgero.crimson": "Crimson",
+  "item.forgero.rabbithide": "Rabbit hide",
   "item.forgero.diamond": "Diamond",
   "item.forgero.netherite": "Netherite",
   "item.forgero.handle": "Handle",
   "item.forgero.binding": "Binding",
   "item.forgero.head": "Head",
   "item.forgero.pickaxehead": "Pickaxehead",
+  "item.forgero.hoehead": "Hoe head",
+  "item.forgero.swordhead": "Sword head",
   "item.forgero.shovelhead": "Shovelhead",
   "item.forgero.axehead": "Axehead",
   "item.forgero.schematic": "Schematic",
