Translations for materials and tools
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -17,9 +17,15 @@
   "item.forgero.spruce": "Spruce",
   "item.forgero.birch": "Birch",
   "item.forgero.acacia": "Acacia",
+  "item.forgero.jungle": "Jungle",
+  "item.forgero.darkoak": "Dark oak",
   "item.forgero.stone": "Stone",
   "item.forgero.iron": "Iron",
   "item.forgero.gold": "Gold",
+  "item.forgero.copper": "Copper",
+  "item.forgero.diorite": "Diorite",
+  "item.forgero.granite": "Granite",
+  "item.forgero.andesite": "Andesite",
   "item.forgero.warped": "Warped",
   "item.forgero.crimson": "Crimson",
   "item.forgero.rabbithide": "Rabbit hide",
@@ -29,6 +35,11 @@
   "item.forgero.binding": "Binding",
   "item.forgero.head": "Head",
   "item.forgero.pickaxehead": "Pickaxehead",
+  "item.forgero.sword": "Sword",
+  "item.forgero.hoe": "Hoe",
+  "item.forgero.axe": "Axe",
+  "item.forgero.pickaxe": "Pickaxe",
+  "item.forgero.shovel": "Shovel",
   "item.forgero.hoehead": "Hoe head",
   "item.forgero.swordhead": "Sword head",
   "item.forgero.shovelhead": "Shovelhead",
@@ -137,6 +148,12 @@
   "item.forgero.stone_axe": "Stone axe",
   "item.forgero.iron_axe": "Iron axe",
   "item.forgero.gold_axe": "Gold axe",
+  "item.forgero.warped_axe": "Warped axe",
+  "item.forgero.crimson_axe": "Crimson axe",
+  "item.forgero.andesite_axe": "Andesite axe",
+  "item.forgero.jungle_axe": "Jungle axe",
+  "item.forgero.darkoak_axe": "Dark oak axe",
+  "item.forgero.diorite_axe": "Diorite axe",
   "item.forgero.diamond_axe": "Diamond axe",
   "item.forgero.netherite_axe": "Netherite axe",
   "item.forgero.emerald_gem": "Emerald gem",
