Adding some achievements
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -3,6 +3,8 @@
   "itemGroup.forgero.tools": "Tools",
   "advancements.forgero.root.title": "A world of possibilities",
   "advancements.forgero.root.description": "Discover the world of Forgero",
+  "advancements.forgero.toolpart.title": "An essential ingredient",
+  "advancements.forgero.toolpart.description": "There are a lot of these",
   "advancements.forgero.head.title": "This looks useful",
   "advancements.forgero.head.description": "Craft your first Tool head",
   "advancements.forgero.handle.title": "Something to hold on to",
@@ -11,8 +13,16 @@
   "advancements.forgero.binding.description": "Craft your first binding",
   "advancements.forgero.schematic.title": "I wonder what I could make with this",
   "advancements.forgero.schematic.description": "Find or craft your first schematic",
+  "advancements.forgero.schematic_vein.title": "I wonder what I could make with this",
+  "advancements.forgero.schematic_vein.description": "Find or craft your first schematic",
+  "advancements.forgero.schematic_pattern.title": "I wonder what I could make with this",
+  "advancements.forgero.schematic_pattern.description": "Find or craft your first schematic",
+  "advancements.forgero.schematic_dense.title": "I wonder what I could make with this",
+  "advancements.forgero.schematic_dense.description": "Find or craft your first schematic",
   "advancements.forgero.gem.title": "Shiny upgrade",
   "advancements.forgero.gem.description": "Craft your first gem",
+  "advancements.forgero.secondary.title": "Double layers!",
+  "advancements.forgero.secondary.description": "Opportunities o' plenty",
   "item.forgero.oak": "Oak",
   "item.forgero.spruce": "Spruce",
   "item.forgero.birch": "Birch",
