Fixing some advancements
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -5,6 +5,8 @@
   "advancements.forgero.root.description": "Discover the world of Forgero",
   "advancements.forgero.toolpart.title": "An essential ingredient",
   "advancements.forgero.toolpart.description": "There are a lot of these",
+  "advancements.forgero.tool.title": "The whole package",
+  "advancements.forgero.tool.description": "Craft a tool!",
   "advancements.forgero.head.title": "This looks useful",
   "advancements.forgero.head.description": "Craft your first Tool head",
   "advancements.forgero.handle.title": "Something to hold on to",
@@ -13,12 +15,12 @@
   "advancements.forgero.binding.description": "Craft your first binding",
   "advancements.forgero.schematic.title": "I wonder what I could make with this",
   "advancements.forgero.schematic.description": "Find or craft your first schematic",
-  "advancements.forgero.schematic_vein.title": "I wonder what I could make with this",
-  "advancements.forgero.schematic_vein.description": "Find or craft your first schematic",
-  "advancements.forgero.schematic_pattern.title": "I wonder what I could make with this",
-  "advancements.forgero.schematic_pattern.description": "Find or craft your first schematic",
-  "advancements.forgero.schematic_dense.title": "I wonder what I could make with this",
-  "advancements.forgero.schematic_dense.description": "Find or craft your first schematic",
+  "advancements.forgero.schematic_vein.title": "This sure looks useful",
+  "advancements.forgero.schematic_vein.description": "Find a vein mining schematic",
+  "advancements.forgero.schematic_pattern.title": "Hmm, 3x3?",
+  "advancements.forgero.schematic_pattern.description": "Find a pattern mining schematic",
+  "advancements.forgero.schematic_dense.title": "Thicc",
+  "advancements.forgero.schematic_dense.description": "Find your first dense schematic",
   "advancements.forgero.gem.title": "Shiny upgrade",
   "advancements.forgero.gem.description": "Craft your first gem",
   "advancements.forgero.secondary.title": "Double layers!",
