Adding translations to material text
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -25,6 +25,7 @@
   "advancements.forgero.gem.description": "Craft your first gem",
   "advancements.forgero.secondary.title": "Double layers!",
   "advancements.forgero.secondary.description": "Opportunities o' plenty",
+  "item.forgero.gem": "Gem",
   "item.forgero.oak": "Oak",
   "item.forgero.spruce": "Spruce",
   "item.forgero.birch": "Birch",
@@ -41,6 +42,7 @@
   "item.forgero.warped": "Warped",
   "item.forgero.crimson": "Crimson",
   "item.forgero.rabbithide": "Rabbit hide",
+  "item.forgero.phantommembrane": "Phantom membrane",
   "item.forgero.diamond": "Diamond",
   "item.forgero.netherite": "Netherite",
   "item.forgero.handle": "Handle",
