Adding a MagneticHandler to make it possible for magnetic gems
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -26,6 +26,8 @@
   "advancements.forgero.secondary.title": "Double layers!",
   "advancements.forgero.secondary.description": "Opportunities o' plenty",
   "item.forgero.gem": "Gem",
+  "item.forgero.magnetico": "Magnetico",
+  "item.forgero.magnetico_gem": "Magnetico Gem",
   "item.forgero.oak": "Oak",
   "item.forgero.spruce": "Spruce",
   "item.forgero.birch": "Birch",
