Removed null value from sworditem
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -57,7 +57,7 @@
   "item.forgero.pickaxe": "Pickaxe",
   "item.forgero.shovel": "Shovel",
   "item.forgero.hoehead": "Hoe head",
-  "item.forgero.swordhead": "Sword head",
+  "item.forgero.swordhead": "Sword blade",
   "item.forgero.shovelhead": "Shovelhead",
   "item.forgero.axehead": "Axehead",
   "item.forgero.schematic": "Schematic",
