Added translations for MM
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -47,6 +47,31 @@
   "item.forgero.phantommembrane": "Phantom membrane",
   "item.forgero.diamond": "Diamond",
   "item.forgero.netherite": "Netherite",
+  "item.forgero.adamantine": "Adamantine",
+  "item.forgero.aquarium": "Aquarium",
+  "item.forgero.banglum": "Banglum",
+  "item.forgero.bronze": "Bronze",
+  "item.forgero.carmot": "Carmot",
+  "item.forgero.celestium": "Celestium",
+  "item.forgero.durasteel": "Durasteel",
+  "item.forgero.halloweed": "Halloweed",
+  "item.forgero.kyber": "Kyber",
+  "item.forgero.manganese": "Manganese",
+  "item.forgero.matallurgium": "Matallurgium",
+  "item.forgero.midasgold": "Midas Gold",
+  "item.forgero.mythril": "Mythril",
+  "item.forgero.orichalcum": "Orichalcum",
+  "item.forgero.osmium": "Osmium",
+  "item.forgero.palladium": "Palladium",
+  "item.forgero.platinum": "Platinum",
+  "item.forgero.quadrillum": "Quadrillum",
+  "item.forgero.runite": "Runite",
+  "item.forgero.silver": "Silver",
+  "item.forgero.starplatinum": "Star Platinum",
+  "item.forgero.steel": "Steel",
+  "item.forgero.stormyx": "Stormyx",
+  "item.forgero.starrite": "Starrite",
+  "item.forgero.tin": "Tin",
   "item.forgero.handle": "Handle",
   "item.forgero.binding": "Binding",
   "item.forgero.head": "Head",
