Made palette optimizations Finished material translations for MM
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -47,22 +47,23 @@
   "item.forgero.phantommembrane": "Phantom membrane",
   "item.forgero.diamond": "Diamond",
   "item.forgero.netherite": "Netherite",
-  "item.forgero.adamantine": "Adamantine",
+  "item.forgero.adamantite": "Adamantite",
   "item.forgero.aquarium": "Aquarium",
   "item.forgero.banglum": "Banglum",
   "item.forgero.bronze": "Bronze",
   "item.forgero.carmot": "Carmot",
   "item.forgero.celestium": "Celestium",
+  "item.forgero.hallowed": "Hallowed",
   "item.forgero.durasteel": "Durasteel",
-  "item.forgero.halloweed": "Halloweed",
   "item.forgero.kyber": "Kyber",
   "item.forgero.manganese": "Manganese",
-  "item.forgero.matallurgium": "Matallurgium",
+  "item.forgero.metallurgium": "Matallurgium",
   "item.forgero.midasgold": "Midas Gold",
   "item.forgero.mythril": "Mythril",
   "item.forgero.orichalcum": "Orichalcum",
   "item.forgero.osmium": "Osmium",
   "item.forgero.palladium": "Palladium",
+  "item.forgero.prometheum": "Prometheum",
   "item.forgero.platinum": "Platinum",
   "item.forgero.quadrillum": "Quadrillum",
   "item.forgero.runite": "Runite",
