Added conflict resolution to pojos Added translations
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -73,6 +73,14 @@
   "item.forgero.stormyx": "Stormyx",
   "item.forgero.starrite": "Starrite",
   "item.forgero.tin": "Tin",
+  "item.forgero.atanium": "Atanium",
+  "item.forgero.cupronickel": "Cupronickel",
+  "item.forgero.invar": "Invar",
+  "item.forgero.nickel": "Nickel",
+  "item.forgero.nitinol": "Nitinol",
+  "item.forgero.titanium": "Titanium",
+  "item.forgero.titaniumgold": "Titanium Gold",
+  "item.forgero.constantan": "Constantan",
   "item.forgero.handle": "Handle",
   "item.forgero.binding": "Binding",
   "item.forgero.head": "Head",
