--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -88,6 +88,23 @@
   "item.forgero.sword": "Sword",
   "item.forgero.hoe": "Hoe",
   "item.forgero.axe": "Axe",
+  "item.forgero.broadsword": "Broadsword",
+  "item.forgero.short_sword": "Short sword",
+  "item.forgero.saber": "Saber",
+  "item.forgero.tachi": "Tachi",
+  "item.forgero.dense_handle": "Dense handle",
+  "item.forgero.reinforced_handle": "Reinforced handle",
+  "item.forgero.kimiri_binding": "Kimiri Binding",
+  "item.forgero.tsuba_binding": "Tsuba Binding",
+  "item.forgero.pattern_axe": "Axe",
+  "item.forgero.vein_axe": "Axe",
+  "item.forgero.pattern_pickaxe": "Pickaxe",
+  "item.forgero.vein_pickaxe": "Pickaxe",
+  "item.forgero.pattern_hoe": "Hoe",
+  "item.forgero.vein_hoe": "Hoe",
+  "item.forgero.pattern_shovel": "Shovel",
+  "item.forgero.vein_shovel": "Shovel",
+  "item.forgero.knife": "Knife",
   "item.forgero.pickaxe": "Pickaxe",
   "item.forgero.shovel": "Shovel",
   "item.forgero.hoehead": "Hoe head",
@@ -99,7 +116,7 @@
   "item.forgero.reinforced": "Reinforced",
   "item.forgero.vein": "Vein mining",
   "item.forgero.pattern": "Pattern mining",
-  "item.forgero.weakvein": "Weak Vein mining",
+  "item.forgero.weakvein_axe": "Weak Axe",
   "item.forgero.oak_handle_default": "Oak handle",
   "item.forgero.birch_handle_default": "Birch handle",
   "item.forgero.spruce_handle_default": "Spruce handle",
