Updated icon for Forgero Group tab
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,6 +1,5 @@
 {
-  "itemGroup.forgero.toolparts": "Tool Parts",
-  "itemGroup.forgero.tools": "Tools",
+  "itemGroup.forgero.forgero": "Forgero",
   "advancements.forgero.root.title": "A world of possibilities",
   "advancements.forgero.root.description": "Discover the world of Forgero",
   "advancements.forgero.toolpart.title": "An essential ingredient",
