Added translations for secondary materials Changed getname method to use Itemstack to build tool name
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -32,7 +32,7 @@
   "item.forgero.birch": "Birch",
   "item.forgero.acacia": "Acacia",
   "item.forgero.jungle": "Jungle",
-  "item.forgero.darkoak": "Dark oak",
+  "item.forgero.dark_oak": "Dark oak",
   "item.forgero.stone": "Stone",
   "item.forgero.iron": "Iron",
   "item.forgero.gold": "Gold",
@@ -40,10 +40,12 @@
   "item.forgero.diorite": "Diorite",
   "item.forgero.granite": "Granite",
   "item.forgero.andesite": "Andesite",
+  "item.forgero.glowstone": "Glowstone",
+  "item.forgero.leather": "Leather",
   "item.forgero.warped": "Warped",
   "item.forgero.crimson": "Crimson",
-  "item.forgero.rabbithide": "Rabbit hide",
-  "item.forgero.phantommembrane": "Phantom membrane",
+  "item.forgero.rabbit_hide": "Rabbit hide",
+  "item.forgero.phantom_membrane": "Phantom membrane",
   "item.forgero.diamond": "Diamond",
   "item.forgero.netherite": "Netherite",
   "item.forgero.adamantite": "Adamantite",
@@ -214,17 +216,17 @@
   "item.forgero.stone_axe": "Stone axe",
   "item.forgero.iron_axe": "Iron axe",
   "item.forgero.gold_axe": "Gold axe",
-  "item.forgero.warped_axe": "Warped axe",
-  "item.forgero.crimson_axe": "Crimson axe",
-  "item.forgero.andesite_axe": "Andesite axe",
-  "item.forgero.jungle_axe": "Jungle axe",
-  "item.forgero.darkoak_axe": "Dark oak axe",
-  "item.forgero.diorite_axe": "Diorite axe",
-  "item.forgero.diamond_axe": "Diamond axe",
-  "item.forgero.netherite_axe": "Netherite axe",
-  "item.forgero.emerald_gem": "Emerald gem",
-  "item.forgero.diamond_gem": "Diamond gem",
-  "item.forgero.redstone_gem": "Redstone gem",
-  "item.forgero.lapis_gem": "Lapis Lazuli gem",
-  "item.forgero.ender_gem": "Ender gem"
+  "item.forgero.warped-axe": "Warped axe",
+  "item.forgero.crimson-axe": "Crimson axe",
+  "item.forgero.andesite-axe": "Andesite axe",
+  "item.forgero.jungle-axe": "Jungle axe",
+  "item.forgero.darkoak-axe": "Dark oak axe",
+  "item.forgero.diorite-axe": "Diorite axe",
+  "item.forgero.diamond-axe": "Diamond axe",
+  "item.forgero.netherite-axe": "Netherite axe",
+  "item.forgero.emerald-gem": "Emerald gem",
+  "item.forgero.diamond-gem": "Diamond gem",
+  "item.forgero.redstone-gem": "Redstone gem",
+  "item.forgero.lapis-gem": "Lapis Lazuli gem",
+  "item.forgero.ender-gem": "Ender gem"
 }
