Updated naming for tool parts
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -92,19 +92,33 @@
   "item.forgero.broadsword": "Broadsword",
   "item.forgero.short_sword": "Short sword",
   "item.forgero.saber": "Saber",
+  "item.forgero.saberhead": "Saber blade",
+  "item.forgero.broadswordhead": "Broadsword blade",
+  "item.forgero.short_swordhead": "Short sword blade",
+  "item.forgero.knifehead": "Knife blade",
+  "item.forgero.tachihead": "Tachi blade",
   "item.forgero.tachi": "Tachi",
   "item.forgero.dense_handle": "Dense handle",
   "item.forgero.reinforced_handle": "Reinforced handle",
   "item.forgero.kimiri_binding": "Kimiri Binding",
   "item.forgero.tsuba_binding": "Tsuba Binding",
   "item.forgero.pattern_axe": "Axe",
+  "item.forgero.pattern_axehead": "Patter mining Axe head",
   "item.forgero.vein_axe": "Axe",
+  "item.forgero.vein_axehead": "Vein mining Axe head",
+  "item.forgero.weakvein_axehead": "Vein mining Axe head",
   "item.forgero.pattern_pickaxe": "Pickaxe",
+  "item.forgero.pattern_pickaxehead": "Pattern mining Pickaxe head",
   "item.forgero.vein_pickaxe": "Pickaxe",
+  "item.forgero.vein_pickaxehead": "Pattern mining Pickaxe Pickaxe",
   "item.forgero.pattern_hoe": "Hoe",
+  "item.forgero.pattern_hoehead": "Pattern mining Hoe head",
   "item.forgero.vein_hoe": "Hoe",
+  "item.forgero.vein_hoehead": "Vein mining Hoe head",
   "item.forgero.pattern_shovel": "Shovel",
+  "item.forgero.pattern_shovelhead": "Pattern mining shovel head",
   "item.forgero.vein_shovel": "Shovel",
+  "item.forgero.vein_shovelhead": "Vein mining shovel head",
   "item.forgero.knife": "Knife",
   "item.forgero.pickaxe": "Pickaxe",
   "item.forgero.shovel": "Shovel",
