Added translations for some elements
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -56,10 +56,11 @@
   "item.forgero.durasteel": "Durasteel",
   "item.forgero.kyber": "Kyber",
   "item.forgero.manganese": "Manganese",
-  "item.forgero.metallurgium": "Matallurgium",
+  "item.forgero.metallurgium": "Metallurgium",
   "item.forgero.midasgold": "Midas Gold",
   "item.forgero.mythril": "Mythril",
   "item.forgero.orichalcum": "Orichalcum",
+  "item.forgero.star_platinum": "Star Platinum",
   "item.forgero.osmium": "Osmium",
   "item.forgero.palladium": "Palladium",
   "item.forgero.prometheum": "Prometheum",
