Added therrassium support Fixed translations for new shcematic items
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -60,7 +60,6 @@
   "item.forgero.midasgold": "Midas Gold",
   "item.forgero.mythril": "Mythril",
   "item.forgero.orichalcum": "Orichalcum",
-  "item.forgero.star_platinum": "Star Platinum",
   "item.forgero.osmium": "Osmium",
   "item.forgero.palladium": "Palladium",
   "item.forgero.prometheum": "Prometheum",
@@ -68,7 +67,7 @@
   "item.forgero.quadrillum": "Quadrillum",
   "item.forgero.runite": "Runite",
   "item.forgero.silver": "Silver",
-  "item.forgero.starplatinum": "Star Platinum",
+  "item.forgero.star_platinum": "Star Platinum",
   "item.forgero.steel": "Steel",
   "item.forgero.stormyx": "Stormyx",
   "item.forgero.starrite": "Starrite",
@@ -79,8 +78,9 @@
   "item.forgero.nickel": "Nickel",
   "item.forgero.nitinol": "Nitinol",
   "item.forgero.titanium": "Titanium",
-  "item.forgero.titaniumgold": "Titanium Gold",
+  "item.forgero.titanium_gold": "Titanium Gold",
   "item.forgero.constantan": "Constantan",
+  "item.forgero.therrassium": "Therrassium",
   "item.forgero.handle": "Handle",
   "item.forgero.binding": "Binding",
   "item.forgero.head": "Head",
