Added quartz gem translation
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>

--- a/src/main/resources/assets/forgero/lang/en_us.json
+++ b/src/main/resources/assets/forgero/lang/en_us.json
@@ -243,5 +243,6 @@
   "item.forgero.ender-gem": "Ender gem",
   "item.forgero.stoneheart-gem": "Stoneheart gem",
   "item.forgero.blazed_stoneheart-gem": "Blazed Stoneheart gem",
-  "item.forgero.magnetico-gem": "Magnetico gem"
+  "item.forgero.magnetico-gem": "Magnetico gem",
+  "item.forgero.quartz-gem": "Quartz gem"
 }
