Improved translation of writyer classes

--- a/fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -24,6 +24,18 @@
   "advancements.forgero.gem.description": "Craft your first gem",
   "advancements.forgero.secondary.title": "Double layers!",
   "advancements.forgero.secondary.description": "Opportunities o' plenty",
+  "item.forgero.attack_speed": "Attack speed",
+  "item.forgero.durability": "Durability",
+  "item.forgero.attack_damage": "Attack damage",
+  "item.forgero.mining_level": "Mining level",
+  "item.forgero.rarity": "Rarity",
+  "item.forgero.mining_speed": "Mining speed",
+  "item.forgero.slots": "Slots",
+  "item.forgero.attributes": "Attributes",
+  "item.forgero.ingredients": "Ingredients",
+  "item.forgero.sword_tip": "Sword tip",
+  "item.forgero.sword_blade": "Sword blade",
+  "item.forgero.scabbard": "Scabbard",
   "item.forgero.gem": "Gem",
   "item.forgero.magnetico": "Magnetico",
   "item.forgero.magnetico_gem": "Magnetico Gem",
