Improved translations and tooltip formatting

--- a/fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -36,8 +36,22 @@
   "item.forgero.sword_tip": "Sword tip",
   "item.forgero.sword_blade": "Sword blade",
   "item.forgero.scabbard": "Scabbard",
+  "item.forgero.sword_guard": "Sword guard",
+  "item.forgero.pummel": "Pummel",
+  "item.forgero.grip": "Grip",
+  "item.forgero.vein_pickaxe_head": "Vein Pickaxe head",
+  "item.forgero.pickaxe_head": "Pickaxe head",
+  "item.forgero.axe_head": "Axe head",
+  "item.forgero.shovel_head": "Shovel head",
+  "item.forgero.tool_binding": "Binding",
+  "item.forgero.hoe_head": "Hoe head",
+  "item.forgero.material": "Material",
+  "item.forgero.wood": "Wood",
+  "item.forgero.metal": "Metal",
   "item.forgero.gem": "Gem",
+  "item.forgero.trinket": "Trinket",
   "item.forgero.magnetico": "Magnetico",
+  "item.forgero.tip_reinforcement": "Tip reinforcement",
   "item.forgero.magnetico_gem": "Magnetico Gem",
   "item.forgero.oak": "Oak",
   "item.forgero.spruce": "Spruce",
