--- a/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -2,14 +2,15 @@
   "itemGroup.forgero.gems": "Gems",
   "itemGroup.forgero.trinkets": "Trinkets",
   "itemGroup.forgero.materials": "Materials",
-  "item.forgero.emerald-gem": "Emerald gem",
-  "item.forgero.diamond-gem": "Diamond gem",
-  "item.forgero.redstone-gem": "Redstone gem",
-  "item.forgero.lapis-gem": "Lapis Lazuli gem",
-  "item.forgero.ender-gem": "Ender gem",
-  "item.forgero.stoneheart-gem": "Stoneheart gem",
-  "item.forgero.blazed_stoneheart-gem": "Blazed Stoneheart gem",
-  "item.forgero.magnetico-gem": "Magnetico gem",
-  "item.forgero.quartz-gem": "Quartz gem",
+  "item.forgero.gem": "Gem",
+  "item.forgero.emerald": "Emerald",
+  "item.forgero.diamond": "Diamond",
+  "item.forgero.redstone": "Redstone",
+  "item.forgero.lapis": "Lapis Lazuli",
+  "item.forgero.ender": "Ender",
+  "item.forgero.stoneheart": "Stoneheart",
+  "item.forgero.blazed_stoneheart": "Blazed Stoneheart",
+  "item.forgero.magnetico": "Magnetico",
+  "item.forgero.quartz": "Quartz",
   "item.forgero.polar_bear_pelt": "Polar bear pelt"
 }
