Fixed texture ordering issues

--- a/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -10,8 +10,8 @@
   "item.forgero.redstone": "Redstone",
   "item.forgero.lapis": "Lapis Lazuli",
   "item.forgero.ender": "Ender",
-  "item.forgero.stoneheart": "Stoneheart",
-  "item.forgero.blazed_stoneheart": "Blazed Stoneheart",
+  "item.forgero.stone_heart": "Stoneheart",
+  "item.forgero.blazed_stone_heart": "Blazed Stoneheart",
   "item.forgero.magnetico": "Magnetico",
   "item.forgero.quartz": "Quartz",
   "item.forgero.polar_bear_pelt": "Polar bear pelt"
