Added all material and stone materials

--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -5,5 +5,7 @@
   "item.forgero.vine": "Vines",
   "item.forgero.twisting_vines": "Twisting Vines",
   "item.forgero.weeping_vines": "Weeping Vines",
-  "item.forgero.secondary_material": "Soft Material"
+  "item.forgero.secondary_material": "Soft Material",
+  "item.forgero.deepslate": "Deepslate",
+  "item.forgero.calcite": "Calcite"
 }
